--- a/webclient/index.html
+++ b/webclient/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" type="text/css" href="css/tagger.css"></style>
             
       <script src="js/jquery-1.8.0.min.js"></script>
+      <script src="js/jquery.hotkeys-0.7.9.min.js"></script>
       <script src="js/Three.js"></script>
       <script src="js/GSVPano.js"></script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
