--- a/webclient/index.html
+++ b/webclient/index.html
@@ -76,6 +76,10 @@
             -->
          </div>
 
+         <p>Default Feature:
+         <select id="feature_selector">
+         </select>
+         </p>
          <div class="divtitle" id="tagtitle">0 Tags</div>
          <span id="save_btn" class="btn">Save to Database</span>
          <div id="tagdiv">
